<resources>
    <string name="app_name">IndiPage</string>
    <string name="label_article_icon">아티클</string>
    <string name="label_search_icon">검색</string>
    <string name="label_ticket_icon">티켓</string>
    <string name="label_my_page_icon">마이페이지</string>
    <string name="tb_article_detail_title">문학살롱 초고</string>
    <string name="tv_article_detail_author">책방지기 키위</string>
    <string name="tv_article_detail_title">반복되는 일상 속 나만의\n아지트가 되어주는 공간</string>
    <string name="tv_article_detail_date">2023-06-08</string>
    <string name="tv_article_detail_interview_title">[Interview] 우리가 함께 써내려간 초고를 돌아보며,</string>
    <string name="tv_article_detail_interview_author">문학살롱 초고대표 김연지</string>
    <string name="tv_article_detail_ticket_title">티켓 받아가세요!</string>
    <string name="tv_article_detail_ticket_detail">이번 주 아티클은 잘 읽으셨나요?\nPPPclub에서 드리는 티켓을 가지고\n문학살롱 초고에 방문하여 인증받아보세요!</string>
    <string name="iv_article_detail_place_image">장소 이미지</string>
    <string name="iv_article_detail_ticket_image">티켓 이미지</string>
    <string name="iv_article_detail_move_to_place_detail_btn">상세 페이지로 이동</string>
    <string name="tv_saved_article_title">저장한 아티클</string>
    <string name="tv_saved_space">저장한 공간</string>
    <string name="tv_app_version">앱 버전 v.1.0.0</string>
    <string name="tv_my_page_question">자주 묻는 질문</string>
    <string name="tv_my_page_exit">탈퇴</string>
    <string name="tv_logout">로그아웃</string>
    <string name="tv_info">개인정보처리방침</string>
    <string name="tv_saved_article_move">읽으러 가기</string>
    <string name="tv_ticket">티켓</string>
    <string name="tv_card">카드</string>
    <string name="tv_card_empty_intro">장소를 방문하여 카드를 받아보세요</string>
    <string name="tv_ticket_empty_title">발급 받은 카드가 없어요!</string>
    <string name="tv_article_empty_intro">아티클을 읽고 티켓을 받아보세요</string>
    <string name="tv_article_empty_title">발급 받은 티켓이 없어요!</string>
    <string name="tv_saved_article_intro">마음에 드는 아티클을 저장해보세요</string>
    <string name="tv_saved_article_empty_title">아직 저장한 아티클이 없어요</string>
    <string name="tv_saved_space_empty_intro">마음에 드는 공간을 저장해보세요</string>
    <string name="tv_saved_space_empty_title">아직 저장한 공간이 없어요</string>
    <string name="tv_qr_success_title">인증 성공!</string>
    <string name="tv_qr_success_intro">카드를 획득헀어요!</string>
    <string name="tv_qr_fail_intro">QR 코드 인식에 실패했어요. \n 다시 시도해보세요!</string>
    <string name="tv_qr_fail_exit">나가기</string>
    <string name="tv_qr_fail_retry">다시 시도하기</string>
    <string name="btn_article_category_weekly">weekly</string>
    <string name="btn_article_category_all">all</string>
    <string name="tv_curation_title">공간지기 추천서가</string>
    <string name="iv_article_weekly_gradient">불투명한 커버</string>
    <string name="tv_search_hint">지역명으로 검색해보세요 ex) 서초구</string>
    <string name="iv_search_result">검색 결과 이미지</string>
    <string name="tv_search_empty">검색된 공간이 없어요</string>
    <string name="tv_search_empty_comment">· 아직 미등록된 공간일 수 있어요\n· 지역명이 정확한지 확인해보세요\n· 검색어는 두 글자 이상 입력해주세요</string>
    <string name="tv_read_article_get_ticket">아티클 읽고 티켓 받기</string>
    <string name="tv_article_detail_banner">나만 알고싶은</string>
    <string name="tv_article_detail_ticket_push">눌러서 티켓 받기</string>
    <string name="iv_space_detail_background">공간 상세 배경</string>
    <string name="iv_back">뒤로가기</string>
    <string name="ib_bookmark_icon">북마크 버튼</string>
    <string name="tv_peculiarity_title">특색요소</string>
    <string name="iv_peculiarity">특색요소 배경</string>
    <string name="tv_article_follow">공간이야기</string>
    <string name="tv_article_follow_comment">PPP 클럽에서 서점이야기를 준비 중이에요.\n빠른 소식을 원한다면 아래 ‘조르기’ 버튼을 눌러주세요:)</string>
    <string name="btn_follow">아티클 조르기</string>
    <string name="iv_purple_frame">뷰페이저 테두리</string>
    <string name="iv_saved_article_background">공간 아티클 이미지</string>
    <string name="tv_article_detail_snackbar_title">티켓을 받았어요!</string>
    <string name="tv_article_detail_snackbar_sub_title">티켓함 가기</string>
</resources>