<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="32dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_white_fill_18_rect">

        <ImageView
            android:id="@+id/iv_qr_fail"
            android:layout_width="0dp"
            android:layout_height="117dp"
            android:layout_marginHorizontal="70dp"
            android:layout_marginTop="46dp"
            android:layout_marginBottom="19dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_qr_fail_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="71dp"
            android:layout_marginTop="21dp"
            android:gravity="center"
            android:text="@string/tv_qr_fail_intro"
            android:textAppearance="@style/TextAppearance.IndiPage.Body06"
            android:textColor="@color/indi_black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_qr_fail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_qr_fail_exit"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/shape_gray200_fill_6_rect"
            android:text="@string/tv_qr_fail_exit"
            android:textAppearance="@style/TextAppearance.IndiPage.Body03"
            android:textColor="@color/indi_gray400"
            app:layout_constraintEnd_toStartOf="@id/btn_qr_fail_retry"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_qr_fail_intro" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_qr_fail_retry"
            android:layout_width="0dp"
            android:layout_height="53dp"
            android:layout_marginBottom="23dp"
            android:background="@drawable/shape_purple_fill_5_rect"
            android:text="@string/tv_qr_fail_retry"
            android:textAppearance="@style/TextAppearance.IndiPage.Body03"
            android:textColor="@color/indi_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_qr_fail_exit"
            app:layout_constraintTop_toTopOf="@id/btn_qr_fail_exit" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>