<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.profile.MyPageFragment">

        <ImageView
            android:id="@+id/iv_my_page_profile_image"
            android:src="@drawable/ic_launcher_background"
            android:layout_width="84dp"
            android:layout_height="0dp"
            android:layout_marginTop="40dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/tv_my_page_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/font_pretendard_semibold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_my_page_profile_image"
            tools:text="김지안" />


        <TextView
            android:id="@+id/tv_my_page_profile_id"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/font_pretendard_regular"
            android:textColor="@color/gray700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_profile_name"
            tools:text="bright98" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_my_page_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray200"
            android:paddingVertical="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_profile_id">

            <ImageView
                android:id="@+id/iv_my_page_profile_article"
                android:layout_width="wrap_content"
                android:layout_height="132dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/ic_launcher_background" />

            <ImageView
                android:id="@+id/iv_my_page_profile_space"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_my_page_profile_question"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_pretendard_regular"
            android:text="@string/tv_my_page_question"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_my_page_profile" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@id/tv_my_page_profile_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cl_my_page_profile" />


        <TextView
            android:id="@+id/tv_my_page_profile_info"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_pretendard_regular"
            android:text="@string/tv_info"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_profile_question" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@id/tv_my_page_profile_info"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_profile_question" />

        <View
            android:id="@+id/line_my_page_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray200"
            android:layout_marginHorizontal="32dp"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_profile_info" />

        <TextView
            android:id="@+id/tv_my_page_profile_logout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_pretendard_regular"
            android:text="@string/tv_logout"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_my_page_1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@id/tv_my_page_profile_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_my_page_1" />

        <TextView
            android:id="@+id/tv_my_page_profile_exit"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_pretendard_regular"
            android:text="@string/tv_my_page_exit"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_profile_logout" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="@id/tv_my_page_profile_exit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_profile_logout" />

        <View
            android:id="@+id/line_my_page_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray200"
            app:layout_constraintTop_toBottomOf="@id/tv_my_page_profile_exit" />

        <TextView
            android:id="@+id/tv_my_page_profile_version"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_pretendard_regular"
            android:text="@string/tv_app_version"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_my_page_2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>